--- a/src/assets/styles/catalogy.scss
+++ b/src/assets/styles/catalogy.scss
@@ -54,30 +54,68 @@
                     }
                 }
                 &__right {
-                    display: grid;
-                    grid-template-columns: 20% 20% 20% 20%;
-                    width: 59%;
-                    gap: 1.3rem;
+                    display: flex;
+                    flex-wrap: wrap;
+                    width: 54%;
+                    gap: 1.5rem;
+                    height: 100%;
                     div {
+                        width: 14.5rem;
+                        height: 14.5rem;
                         background-repeat: no-repeat;
-                        border-radius: 0.5rem;
+                        border-radius: 0.3rem;
                         background-size: cover;
                         display: flex;
                         align-items: flex-end;
                         justify-content: center;
                         cursor: pointer;
+                        overflow: hidden;
                         h4 {
                             color: white;
                             background: RGBa(0, 0, 0, 0.5);
-                            width: 100%;
+                            width: 96%;
+                            border-radius: 0.3rem;
                             padding: 0.1rem;
                             text-align: center;
                             font-size: 0.8rem;
-                            border-radius: 0.5rem;
-                            height: 25%;
+                            line-height: 1rem;
+                            height: 20%;
                             display: flex;
                             align-items: center;
+                            justify-content: center;
                             margin-bottom: 0;
+                            overflow: hidden;
+                        }
+                    }
+                }
+            }
+            &__id {
+                &__title {
+                    display: flex;
+                    justify-content: space-between;
+                    width: 97%;
+                    padding-top: 2rem;
+                    margin: 0 auto;
+                    .info__1 {
+                        width: 45%;
+                        display: flex;
+                        flex-direction: column;
+                        img {
+                            border-radius: 0.6rem;
+                            width: 100%;
+                            height: 25rem;
+                        }
+                    }
+                    .info__2 {
+                        width: 50%;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 0.2rem;
+                        h1 {
+                            line-height: 3rem;
+                        }
+                        p {
+                            line-height: 2.2rem;
                         }
                     }
                 }
