--- a/src/assets/styles/company.scss
+++ b/src/assets/styles/company.scss
@@ -1,6 +1,7 @@
         .company {
             &__about {
                 display: flex;
+                flex-wrap: wrap;
                 padding-left: 1.5%;
                 gap: 5.5rem;
                 margin-top: 2rem;
@@ -47,6 +48,7 @@
             }
             &__target {
                 display: flex;
+                flex-wrap: wrap;
                 justify-content: space-between;
                 padding-right: 3.5%;
                 &__left {
@@ -85,6 +87,7 @@
                 }
                 div {
                     display: flex;
+                    flex-wrap: wrap;
                     justify-content: space-evenly;
                     div {
                         text-align: center;
@@ -105,6 +108,7 @@
             }
             &__consulting {
                 display: flex;
+                flex-wrap: wrap;
                 justify-content: space-between;
                 padding-right: 3.5%;
                 margin-top: 3rem;
@@ -139,6 +143,7 @@
             // Service
             &__service {
                 display: flex;
+                flex-wrap: wrap;
                 justify-content: space-between;
                 padding-right: 3.5%;
                 margin-top: 3rem;
@@ -174,6 +179,7 @@
             // Study
             &__study {
                 display: flex;
+                flex-wrap: wrap;
                 justify-content: space-between;
                 padding-right: 3.5%;
                 margin-top: 4rem;
@@ -223,6 +229,7 @@
                 }
                 div {
                     display: flex;
+                    flex-wrap: wrap;
                     width: 93%;
                     padding: 1rem;
                     justify-content: space-between;
