--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -79,6 +79,8 @@ body {
                 }
                 h3 {
                     font-size: 1rem;
+                    width: 85%;
+                    line-height: 1.2rem;
                 }
             }
         }
