--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -8,10 +8,16 @@
     padding: 0.5rem;
     &__logo {
         cursor: pointer;
+        img {
+            height: 2rem;
+        }
     }
     &__catalogy {
         margin-left: 4%;
         cursor: pointer;
+        img {
+            height: 3rem;
+        }
     }
     &__links {
         display: flex;
@@ -27,7 +33,7 @@
                 cursor: pointer;
                 list-style: none;
                 margin: 1rem;
-                font-size: 1rem;
+                font-size: 14px;
                 &:hover {
                     color: #2C90A8;
                 }
@@ -50,7 +56,7 @@
                 text-decoration: underline;
                 font-weight: 500;
                 line-height: 1.2rem;
-                font-size: 0.8rem;
+                font-size: 0.7rem;
             }
         }
     }
