--- a/src/assets/styles/service.scss
+++ b/src/assets/styles/service.scss
@@ -29,5 +29,30 @@
     }
     &__steps {
         display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        gap: 3rem;
+        padding-top: 3rem;
+        div {
+            margin-top: 2rem;
+            width: 30%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            h1 {
+                padding: 2rem;
+                background-color: #2C90A8;
+                border-radius: 50%;
+                font-size: 3.5rem;
+                color: white;
+            }
+            p {
+                width: 80%;
+                line-height: 1.5rem;
+                font-size: 1rem;
+                opacity: 0.8;
+            }
+        }
     }
 }
