--- a/src/assets/styles/service.scss
+++ b/src/assets/styles/service.scss
@@ -4,14 +4,17 @@
         display: flex;
         width: 95%;
         margin-top: 3rem;
+        flex-wrap: wrap;
         justify-content: space-between;
         &__left {
-            width: 45%;
+            width: 50%;
+            max-width: 100%;
             display: flex;
             flex-direction: column;
             gap: 1rem;
             h1 {
                 font-size: 2.5em;
+                line-height: 2rem;
                 span {
                     color: #2C90A8;
                 }
@@ -22,7 +25,9 @@
             }
         }
         &__right {
+            width: 45%;
             img {
+                width: 100%;
                 border-radius: 1.5rem;
             }
         }
