--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -1,11 +1,13 @@
 .footer {
+    background: linear-gradient(0deg, rgb(255 255 255 / 10%), rgb(255 255 255 / 50%));
     border-top: 2px solid #2C90A8;
     height: 23rem;
     margin-bottom: 0;
     display: flex;
     align-items: flex-start;
     padding: 3rem;
-    padding-left: 1.9rem;
+    padding-left: 10%;
+    padding-right: 10%;
     gap: 3rem;
     justify-content: space-between;
     padding-bottom: 5rem;
@@ -31,6 +33,7 @@
         margin-left: 4rem;
         h2 {
             font-size: 1.9rem;
+            color: #2C90A8;
         }
         ul {
             text-align: start;
@@ -52,6 +55,7 @@
     }
     &__right {
         h2 {
+            color: #2C90A8;
             font-size: 1.9rem;
         }
         width: 20%;
