--- a/src/assets/styles/contacts.scss
+++ b/src/assets/styles/contacts.scss
@@ -8,7 +8,7 @@
     text-align: center;
     color: white;
     padding-top: 0.5rem;
-    margin-bottom: 6rem;
+    // margin-bottom: 6rem;
     padding-bottom: 2rem;
     h2 {
         font-size: 2.3rem;
