--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -2,20 +2,27 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Rubik', sans-serif;
     font-weight: 500;
+    background-color: rgb(243 243 243);
+    // background: linear-gradient(0deg, rgb(255 255 255 / 10%), rgb(255 255 255 / 50%));
+    // background-image: url('https://endo.uz/wp-content/themes/endo/assets/img/rectangle.png');
 }
 
 .home {
-    // Header
+    background-color: rgb(243 243 243);
+    padding-bottom: 6rem;
     &__header {
         background-image: url('../images/header__image.jpg');
         background-size: cover;
+        background-position: 45%;
         background-repeat: no-repeat;
-        height: 32rem;
+        height: 39rem;
         padding: 1.3rem;
+        padding-left: 7%;
         div {
-            width: 60%;
+            // margin-left: 6%;
+            width: 65%;
             h1 {
                 line-height: 4.7rem;
                 font-weight: 800;
@@ -42,16 +49,24 @@ body {
     }
     // Department
     &__department {
+        background-color: white;
+        width: 85%;
+        margin: 0 auto;
+        border-radius: 2rem;
+        position: relative;
+        margin-top: -4.5rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
         text-align: center;
         padding-top: 1.5rem;
+        padding-bottom: 2rem;
         h1 {
             font-size: 3rem;
+            color: #2C90A8;
         }
         div {
-            width: 80%;
+            width: 100%;
             margin: 0 auto;
             margin-top: 1rem;
             display: flex;
@@ -63,21 +78,25 @@ body {
             }
             div {
                 width: 14rem;
-                height: 9rem;
+                height: 10rem;
                 border-radius: 1.6rem;
-                background: #19191B0A;
+                background: linear-gradient(273.37deg, #73CEE3 1.45%, #2C90A8 119.64%);
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 gap: 0.5rem;
                 padding-top: 2rem;
+                img {
+                    height: 3rem;
+                }
                 span {
-                    background: #19191B1A;
+                    background: white;
                     border-radius: 50%;
                     width: 3.3rem;
                     height: 3.3rem;
                 }
                 h3 {
+                    color: white;
                     font-size: 1rem;
                     width: 85%;
                     line-height: 1.2rem;
@@ -89,8 +108,16 @@ body {
     &__partners {
         padding-top: 4rem;
         text-align: center;
+        background-color: white;
+        background-color: white;
+        margin: 0 auto;
+        // border-radius: 2rem;
+        // margin-top: 2rem;
+        width: 100%;
+        padding-bottom: 5rem;
         h1 {
-            font-size: 3rem;
+            font-size: 4rem;
+            color: #2C90A8;
         }
         div {
             display: flex;
@@ -111,38 +138,46 @@ body {
 }
 
 .contacts {
+    width: 85%;
+    margin: 0 auto;
     &__address {
-        width: 97%;
+        width: 100%;
+        border-radius: 2rem;
         display: flex;
         flex-wrap: wrap;
         margin: 0 auto;
+        margin-top: 2rem;
         justify-content: space-between;
+        background-color: white;
         gap: 1rem;
         div {
-            align-items: center;
             display: flex;
-            width: 30%;
-            column-gap: 0.8rem;
             align-items: center;
+            width: 35%;
+            justify-content: space-evenly;
+            // background-color: red;
+            // column-gap: 0.8rem;
             svg {
                 background-color: #2C90A8;
-                padding: 0.6rem;
+                padding: 1rem;
                 border-radius: 50%;
+                margin-top: 1.5rem;
             }
             div {
                 align-items: flex-start;
                 text-align: start;
                 display: flex;
                 flex-direction: column;
-                width: 40%;
-                margin-top: -0.3rem;
+                width: 70%;
+                // background-color: red;
+                margin-top: -1rem;
                 h6 {
-                    font-size: 0.9rem;
+                    font-size: 1.5rem;
                     color: rgba(0, 0, 0, 0.5);
                 }
                 p {
-                    margin-top: -1.9rem;
-                    font-size: 0.8rem;
+                    margin-top: -3rem;
+                    font-size: 1.2rem;
                     line-height: 1.5rem;
                 }
             }
@@ -152,10 +187,10 @@ body {
         position: relative;
         text-align: right;
         height: 500px;
-        width: 92%;
+        width: 100%;
         border-radius: 1rem;
-        margin-top: 1rem;
-        margin-left: 1.5%;
+        margin-top: 2rem;
+        // margin-left: 1.5%;
     }
     .gmap_canvas {
         overflow: hidden;
@@ -209,7 +244,7 @@ body {
         }
         .right {
             border-radius: 2rem;
-            width: 25%;
+            width: 28%;
             background: rgba(44, 144, 168, 00.1);
             display: flex;
             flex-direction: column;
