--- a/src/assets/styles/service.scss
+++ b/src/assets/styles/service.scss
@@ -1,20 +1,19 @@
 .service {
+    width: 85%;
+    margin: 0 auto;
     &__content {
-        padding-left: 1.5%;
         display: flex;
-        width: 95%;
+        width: 100%;
         margin-top: 3rem;
-        flex-wrap: wrap;
+        gap: 3rem;
         justify-content: space-between;
         &__left {
-            width: 50%;
-            max-width: 100%;
+            width: 65%;
             display: flex;
             flex-direction: column;
             gap: 1rem;
             h1 {
                 font-size: 2.5em;
-                line-height: 2rem;
                 span {
                     color: #2C90A8;
                 }
@@ -25,8 +24,9 @@
             }
         }
         &__right {
-            width: 45%;
+            width: 50%;
             img {
+                height: 95%;
                 width: 100%;
                 border-radius: 1.5rem;
             }
