--- a/src/assets/styles/partners.scss
+++ b/src/assets/styles/partners.scss
@@ -23,7 +23,7 @@
             align-items: center;
             cursor: pointer;
             img {
-                height: 3.5rem;
+                height: 30%;
             }
         }
     }
