--- a/src/assets/styles/contacts.scss
+++ b/src/assets/styles/contacts.scss
@@ -3,12 +3,12 @@
     width: 95%;
     margin: 0 auto;
     height: 12 rem;
-    margin-top: 6rem;
+    margin-top: 3rem;
     border-radius: 1.2rem;
     text-align: center;
     color: white;
     padding-top: 0.5rem;
-    // margin-bottom: 6rem;
+    margin-bottom: 4rem;
     padding-bottom: 2rem;
     h2 {
         font-size: 2.3rem;
