--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -2,8 +2,8 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Rubik', sans-serif;
-    font-weight: 500;
+    font-family: 'Secular One', sans-serif;
+    font-weight: 600;
     background-color: rgb(243 243 243);
     // background: linear-gradient(0deg, rgb(255 255 255 / 10%), rgb(255 255 255 / 50%));
     // background-image: url('https://endo.uz/wp-content/themes/endo/assets/img/rectangle.png');
@@ -13,16 +13,19 @@ body {
     background-color: rgb(243 243 243);
     padding-bottom: 6rem;
     &__header {
-        background-image: url('../images/header__image.jpg');
+        background-image: url('../images/main__image.jpg');
+        background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url('../images/main__image.jpg');
         background-size: cover;
-        background-position: 45%;
+        background-position: left;
         background-repeat: no-repeat;
         height: 39rem;
         padding: 1.3rem;
         padding-left: 7%;
         div {
+            // position: relative;
             // margin-left: 6%;
-            width: 65%;
+            // background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('../images/main__image.jpg');
+            width: 75%;
             h1 {
                 line-height: 4.7rem;
                 font-weight: 800;
@@ -30,7 +33,7 @@ body {
                 color: white;
             }
             p {
-                color: #FFFFFF;
+                color: white;
                 font-weight: 400;
                 font-size: 1.6rem;
                 width: 90%;
@@ -39,11 +42,13 @@ body {
             }
         }
         button {
+            background-color: #2C90A8;
             width: 15%;
-            height: 3rem;
+            height: 3.5rem;
             border: none;
-            color: #2C90A8;
-            border-radius: 0.6rem;
+            font-size: 0.9rem;
+            color: white;
+            border-radius: 2rem;
             margin-top: 1.4rem;
         }
     }
@@ -77,7 +82,7 @@ body {
                 color: white;
             }
             div {
-                width: 14rem;
+                width: 15rem;
                 height: 10rem;
                 border-radius: 1.6rem;
                 background: linear-gradient(273.37deg, #73CEE3 1.45%, #2C90A8 119.64%);
@@ -108,30 +113,31 @@ body {
     &__partners {
         padding-top: 4rem;
         text-align: center;
-        background-color: white;
-        background-color: white;
+        // background: linear-gradient(0deg, rgb(255 255 255 / 10%), rgb(255 255 255 / 50%));
+        // background-color: white;
         margin: 0 auto;
-        // border-radius: 2rem;
-        // margin-top: 2rem;
         width: 100%;
         padding-bottom: 5rem;
         h1 {
             font-size: 4rem;
             color: #2C90A8;
         }
-        div {
+        .slick-track {
             display: flex;
-            flex-wrap: wrap;
-            width: 87%;
-            margin: 0 auto;
-            justify-content: space-between;
-            gap: 5rem;
-            margin-top: 3rem;
+            gap: 2rem;
+        }
+        .partner__image {
+            margin-top: 1rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 1rem;
+            background-color: white;
             img {
-                &:nth-child(5) {
-                    height: 3rem;
-                }
-                height: 4.5rem;
+                padding: 2rem;
+                // border-radius: 0.8rem;
+                height: 2.2rem;
+                margin: 0 auto;
             }
         }
     }
@@ -206,7 +212,7 @@ body {
         margin-top: 3rem;
         margin-bottom: 3rem;
         display: flex;
-        gap: 8rem;
+        gap: 7rem;
         padding-left: 1%;
         .left {
             background: rgba(44, 144, 168, 00.1);
@@ -220,6 +226,9 @@ body {
             gap: 2rem;
             div {
                 width: 40%;
+                h2 {
+                    font-size: 1.3rem;
+                }
                 h5 {
                     font-size: 1rem;
                     margin-bottom: 0.3rem;
