--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Secular One', sans-serif;
+    font-family: sans-serif;
     font-weight: 600;
     background-color: rgb(243 243 243);
     // background: linear-gradient(0deg, rgb(255 255 255 / 10%), rgb(255 255 255 / 50%));
