--- a/src/assets/styles/service.scss
+++ b/src/assets/styles/service.scss
@@ -4,12 +4,13 @@
     padding-bottom: 5rem;
     &__content {
         display: flex;
+        flex-direction: column-reverse;
         width: 100%;
         margin-top: 3rem;
         gap: 3rem;
         justify-content: space-between;
         &__left {
-            width: 65%;
+            width: 100%;
             display: flex;
             flex-direction: column;
             gap: 1rem;
@@ -25,7 +26,7 @@
             }
         }
         &__right {
-            width: 55%;
+            width: 100%;
             img {
                 height: 100%;
                 width: 100%;
