--- a/src/assets/styles/catalogy.scss
+++ b/src/assets/styles/catalogy.scss
@@ -1,160 +1,128 @@
-        .catalogy {
-            width: 85%;
-            margin: 0 auto;
-            &__image {
-                background-image: url('../images/catalogy__image.png');
-                background-size: cover;
-                color: white;
-                position: relative;
-                width: 100%;
+            .catalogy {
+                width: 85%;
                 margin: 0 auto;
-                border-radius: 10px;
-                &__text {
+                &__image {
+                    background-image: url('../images/catalogy__image.png');
+                    background-size: cover;
+                    color: white;
+                    position: relative;
+                    width: 100%;
+                    margin: 0 auto;
                     border-radius: 10px;
-                    padding: 0.2rem;
-                    padding-left: 1.4rem;
-                    z-index: 1;
-                    background: rgba(115, 206, 227, .6);
-                    background: rgba(44, 144, 168, .6);
-                    h2 {
-                        text-transform: uppercase;
-                        font-size: 2rem;
-                    }
-                    p {
-                        cursor: pointer;
-                        margin-top: -1rem;
-                        a {
-                            text-decoration: none;
-                            color: white;
-                            &:hover {
-                                color: #2C90A8;
+                    &__text {
+                        border-radius: 10px;
+                        padding: 0.2rem;
+                        padding-left: 1.4rem;
+                        z-index: 1;
+                        background: rgba(115, 206, 227, .6);
+                        background: rgba(44, 144, 168, .6);
+                        h2 {
+                            text-transform: uppercase;
+                            font-size: 2rem;
+                        }
+                        p {
+                            cursor: pointer;
+                            margin-top: -1rem;
+                            a {
+                                text-decoration: none;
+                                color: white;
+                                &:hover {
+                                    color: #2C90A8;
+                                }
                             }
                         }
                     }
                 }
-            }
-            &__content {
-                width: 100%;
-                margin: 0 auto;
-                padding-top: 2rem;
-                padding-bottom: 5rem;
-                display: flex;
-                justify-content: space-between;
-                &__left {
+                &__content {
+                    width: 100%;
+                    margin: 0 auto;
+                    padding-top: 2rem;
+                    padding-bottom: 5rem;
                     display: flex;
-                    flex-direction: column;
-                    width: 32%;
-                    // gap: 0.1rem;
-                    .title {
-                        width: 80%;
+                    justify-content: space-between;
+                    &__left {
+                        display: flex;
+                        flex-direction: column;
+                        width: 32%;
+                        // gap: 0.1rem;
+                        .title {
+                            width: 80%;
+                        }
+                        div {
+                            padding: 0.7rem;
+                            cursor: pointer;
+                            border-radius: 10px;
+                            justify-content: space-between;
+                            display: flex;
+                            flex-direction: row;
+                            background: rgba(249, 249, 249, 1);
+                            &:nth-child(1) {
+                                background-color: #2C90A8;
+                                color: white;
+                            }
+                        }
                     }
-                    div {
-                        padding: 0.7rem;
-                        cursor: pointer;
-                        border-radius: 10px;
+                    &__right {
+                        display: flex;
+                        flex-wrap: wrap;
                         justify-content: space-between;
+                        width: 65%;
+                        gap: 1.5rem;
+                        height: 100%;
+                        div {
+                            width: 15.5rem;
+                            height: 14.5rem;
+                            background-repeat: no-repeat;
+                            border-radius: 0.3rem;
+                            background-size: cover;
+                            display: flex;
+                            align-items: flex-end;
+                            justify-content: center;
+                            cursor: pointer;
+                            overflow: hidden;
+                            h4 {
+                                color: white;
+                                background: RGBa(0, 0, 0, 0.5);
+                                width: 100%;
+                                // border-radius: 0.3rem;
+                                padding: 0.1rem;
+                                text-align: center;
+                                font-size: 0.8rem;
+                                line-height: 1rem;
+                                height: 20%;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                margin-bottom: 0;
+                                overflow: hidden;
+                            }
+                        }
+                    }
+                }
+                &__id {
+                    width: 85%;
+                    margin: 0 auto;
+                    .fullInfo {
                         display: flex;
                         flex-direction: row;
-                        background: rgba(249, 249, 249, 1);
-                        &:nth-child(1) {
-                            background-color: #2C90A8;
-                            color: white;
+                        justify-content: space-between;
+                        padding-top: 2rem;
+                        &__image {
+                            width: 35%;
+                            img {
+                                width: 100%;
+                                height: 20rem;
+                            }
                         }
-                    }
-                }
-                &__right {
-                    display: flex;
-                    flex-wrap: wrap;
-                    justify-content: space-between;
-                    width: 65%;
-                    gap: 1.5rem;
-                    height: 100%;
-                    div {
-                        width: 15.5rem;
-                        height: 14.5rem;
-                        background-repeat: no-repeat;
-                        border-radius: 0.3rem;
-                        background-size: cover;
-                        display: flex;
-                        align-items: flex-end;
-                        justify-content: center;
-                        cursor: pointer;
-                        overflow: hidden;
-                        h4 {
-                            color: white;
-                            background: RGBa(0, 0, 0, 0.5);
-                            width: 100%;
-                            // border-radius: 0.3rem;
-                            padding: 0.1rem;
-                            text-align: center;
-                            font-size: 0.8rem;
-                            line-height: 1rem;
-                            height: 20%;
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
-                            margin-bottom: 0;
-                            overflow: hidden;
+                        &__text {
+                            h1 {
+                                color: #2C90A8;
+                            }
+                            p {
+                                color: rgb(89 94 99);
+                            }
+                            width: 60%;
                         }
                     }
                 }
             }
-            &__id {
-                width: 85%;
-                margin: 0 auto;
-                .partner_id {
-                    padding-top: 2rem;
-                    .info__1 {
-                        margin: 0 auto;
-                        width: 95%;
-                        margin-bottom: 5rem;
-                        // background-color: red;
-                        img {
-                            // height: 10%;
-                            // width: 20rem;
-                            height: 5rem;
-                            float: left;
-                            margin-right: 2rem;
-                        }
-                        p {
-                            text-align: justify;
-                            // width: 90%;
-                            // line-height: 1rem;
-                            // font-size: 1.1rem;
-                        }
-                        h1 {
-                            font-size: 2rem;
-                        }
-                    }
-                }
-                &__title {
-                    display: flex;
-                    justify-content: space-between;
-                    width: 100%;
-                    padding-top: 2rem;
-                    margin: 0 auto;
-                    .info__1 {
-                        width: 45%;
-                        display: flex;
-                        flex-direction: column;
-                        img {
-                            border-radius: 0.6rem;
-                            width: 100%;
-                            height: 25rem;
-                        }
-                    }
-                    .info__2 {
-                        width: 50%;
-                        display: flex;
-                        flex-direction: column;
-                        gap: 0.2rem;
-                        h1 {
-                            line-height: 3rem;
-                        }
-                        p {
-                            line-height: 2.2rem;
-                        }
-                    }
-                }
-            }
-        }
