--- a/src/assets/styles/catalogy.scss
+++ b/src/assets/styles/catalogy.scss
@@ -103,15 +103,19 @@
                     width: 85%;
                     margin: 0 auto;
                     .fullInfo {
+                        width: 80%;
                         display: flex;
                         flex-direction: row;
+                        // justify-content: space-between;
                         justify-content: space-between;
+                        // background-color: red;
+                        margin: 0 auto;
                         padding-top: 2rem;
                         &__image {
-                            width: 35%;
+                            width: 50%;
                             img {
                                 width: 100%;
-                                height: 20rem;
+                                height: 25rem;
                             }
                         }
                         &__text {
@@ -121,7 +125,7 @@
                             p {
                                 color: rgb(89 94 99);
                             }
-                            width: 60%;
+                            width: 45%;
                         }
                     }
                 }
