--- a/src/assets/styles/catalogy.scss
+++ b/src/assets/styles/catalogy.scss
@@ -75,6 +75,7 @@
                             background-repeat: no-repeat;
                             border-radius: 0.3rem;
                             background-size: cover;
+                            background-position: 42%;
                             display: flex;
                             align-items: flex-end;
                             justify-content: center;
@@ -103,19 +104,17 @@
                     width: 85%;
                     margin: 0 auto;
                     .fullInfo {
-                        width: 80%;
+                        width: 95%;
                         display: flex;
                         flex-direction: row;
-                        // justify-content: space-between;
                         justify-content: space-between;
-                        // background-color: red;
                         margin: 0 auto;
                         padding-top: 2rem;
                         &__image {
-                            width: 50%;
+                            width: 60%;
                             img {
                                 width: 100%;
-                                height: 25rem;
+                                height: 31rem;
                             }
                         }
                         &__text {
@@ -125,7 +124,7 @@
                             p {
                                 color: rgb(89 94 99);
                             }
-                            width: 45%;
+                            width: 30%;
                         }
                     }
                 }
