--- a/src/assets/styles/company.scss
+++ b/src/assets/styles/company.scss
@@ -16,6 +16,7 @@
                     h1 {
                         text-align: center;
                         font-size: 2.7em;
+                        color: #2C90A8;
                         span {
                             color: #2C90A8;
                         }
@@ -88,6 +89,7 @@
             // }
             &__benefits {
                 h1 {
+                    color: #2C90A8;
                     font-size: 2.7em;
                     margin-top: 1.5rem;
                     text-align: center;
@@ -174,6 +176,7 @@
                 &__right {
                     width: 48%;
                     h1 {
+                        color: #2C90A8;
                         font-size: 2.7em;
                         margin-top: 1.1rem;
                     }
@@ -232,6 +235,7 @@
             &__news {
                 padding-top: 2rem;
                 h1 {
+                    color: #2C90A8;
                     font-size: 2.7em;
                     margin-top: 1.5rem;
                     text-align: center;
