--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -3,7 +3,7 @@ body {
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
-    font-weight: 600;
+    // font-weight: 500;
     background-color: rgb(243 243 243);
     // background: linear-gradient(0deg, rgb(255 255 255 / 10%), rgb(255 255 255 / 50%));
     // background-image: url('https://endo.uz/wp-content/themes/endo/assets/img/rectangle.png');
@@ -113,8 +113,6 @@ body {
     &__partners {
         padding-top: 4rem;
         text-align: center;
-        // background: linear-gradient(0deg, rgb(255 255 255 / 10%), rgb(255 255 255 / 50%));
-        // background-color: white;
         margin: 0 auto;
         width: 100%;
         padding-bottom: 5rem;
