--- a/src/assets/styles/service.scss
+++ b/src/assets/styles/service.scss
@@ -1,4 +1,5 @@
 .service {
+    // max-width: 100%;
     width: 85%;
     margin: 0 auto;
     padding-bottom: 5rem;
@@ -8,9 +9,9 @@
         width: 100%;
         margin-top: 3rem;
         gap: 3rem;
+        width: 100%;
         justify-content: space-between;
         &__left {
-            width: 100%;
             display: flex;
             flex-direction: column;
             gap: 1rem;
