--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -9,6 +9,29 @@
     padding: 0.5rem;
     width: 85%;
     margin: 0 auto;
+    .bm-burger-bars {
+        background-color: #2C90A8;
+    }
+    .bm-burger-button {
+        top: 1.8%;
+        height: 1.5rem;
+        width: 2rem;
+    }
+    .bm-menu {
+        background-color: #2C90A8;
+        display: flex;
+        justify-content: center;
+        left: 0;
+    }
+    .bm-cross-button,
+    .cross-style {
+        left: 88%;
+        top: 3%;
+    }
+    .bm-item-list>* {
+        color: white;
+        list-style: none;
+    }
     &__logo {
         cursor: pointer;
         img {
