--- a/src/assets/styles/responsive.scss
+++ b/src/assets/styles/responsive.scss
@@ -1,28 +1,28 @@
 @media screen and (max-width: 525px) {
-    .bm-burger-bars {
-        background-color: #2C90A8;
-    }
-    .bm-burger-button {
-        top: 1.8%;
-        height: 1.5rem;
-        width: 2rem;
-    }
-    .bm-menu {
-        background-color: #2C90A8;
-        display: flex;
-        justify-content: center;
-        left: 0;
-    }
-    .bm-cross-button,
-    .cross-style {
-        left: 88%;
-        top: 3%;
-    }
-    .bm-item-list>* {
-        color: white;
-        list-style: none;
-    }
     .navbar {
+        .bm-burger-bars {
+            background-color: #2C90A8;
+        }
+        .bm-burger-button {
+            top: 1.8%;
+            height: 1.5rem;
+            width: 2rem;
+        }
+        .bm-menu {
+            background-color: #2C90A8;
+            display: flex;
+            justify-content: center;
+            left: 0;
+        }
+        .bm-cross-button,
+        .cross-style {
+            left: 88%;
+            top: 3%;
+        }
+        .bm-item-list>* {
+            color: white;
+            list-style: none;
+        }
         flex-wrap: wrap;
         gap: 0.5rem;
         padding: 4%;
@@ -424,7 +424,7 @@
     }
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (min-width: 525px) and (max-width: 850px) {
     .bm-burger-bars {
         background-color: #2C90A8;
     }
