--- a/src/assets/styles/navbar.scss
+++ b/src/assets/styles/navbar.scss
@@ -13,7 +13,7 @@
         background-color: #2C90A8;
     }
     .bm-burger-button {
-        top: 1.8%;
+        // margin-top: 2%;
         height: 1.5rem;
         width: 2rem;
     }
