--- a/src/assets/styles/catalogy.scss
+++ b/src/assets/styles/catalogy.scss
@@ -48,6 +48,10 @@
                         .title {
                             width: 80%;
                         }
+                        .activeIndex {
+                            background-color: #2C90A8;
+                            color: white;
+                        }
                         div {
                             padding: 0.7rem;
                             cursor: pointer;
@@ -56,7 +60,7 @@
                             display: flex;
                             flex-direction: row;
                             background: rgba(249, 249, 249, 1);
-                            &:nth-child(1) {
+                            .backBlue {
                                 background-color: #2C90A8;
                                 color: white;
                             }
@@ -83,7 +87,7 @@
                             overflow: hidden;
                             h4 {
                                 color: white;
-                                background: RGBa(0, 0, 0, 0.5);
+                                background-color: #2C90A8;
                                 width: 100%;
                                 // border-radius: 0.3rem;
                                 padding: 0.1rem;
@@ -104,27 +108,28 @@
                     width: 85%;
                     margin: 0 auto;
                     .fullInfo {
-                        width: 95%;
+                        width: 85%;
                         display: flex;
                         flex-direction: row;
                         justify-content: space-between;
                         margin: 0 auto;
-                        padding-top: 2rem;
+                        padding-top: 4rem;
                         &__image {
-                            width: 60%;
+                            width: 70%;
+                            padding-top: 1.8rem;
                             img {
-                                width: 100%;
-                                height: 31rem;
+                                width: 90%;
+                                height: 100%;
                             }
                         }
                         &__text {
+                            width: 80%;
                             h1 {
                                 color: #2C90A8;
                             }
                             p {
                                 color: rgb(89 94 99);
                             }
-                            width: 30%;
                         }
                     }
                 }
